update/GCMC todo

--- a/1-screening.tex
+++ b/1-screening.tex
@@ -25,16 +25,26 @@ we will use a single terminology (nanopore) to designate all pores of under a fe
 %volume / porosity
 The pore volume consists in the measure of the volume of ``closed'' and ``open'' pores of nanoporous materials. Depending on the way of measuring it, different quantities are probed. Some pores could not be accessed by some adsorbate; depending on the probe size the volume calculated will not be the same. Methods that do not rely on adsorption like scattering or stereology will however measure the total pore volume. The porosity or void fraction would be defined as the ratio between the pore volume and the apparent framework volume. Depending on the method, we can therefore retrieve either the total porosity, the porosity opened or closed to a given probe adsorbate. 
 
-\todo{figure vol/surface PSD; PoreBlazer}
+\begin{figure}[ht]
+  \centering
+  \includegraphics[width=0.7\textwidth]{figures/1-screening/Pore_descriptors.jpg}
+  \caption{Illustration of the pore surface area and volume in a nanoporous material. As illustrated, there are different definitions of the pore volume: we can either consider the whole volume of the pores or the volume occupiable by a given proble. The surfaces also changes depending on the definition. Studies have shown that occupiable volume has a better accordance with experimental data.\cite{vol_Ongari2017}}\label{fgr:pores}
+\end{figure}
 
 %Definitions of surface area, porosity etc. Values depend on the method to extract them. A word on computational characterization (will be developed later)
 The cavities of the nanoporous material lay out an incredibly large adsorbable surface area, which is extremely useful in increasing the number of molecules in a given volume or mass of material, several thousands of square meters can be found in a gram of some nanoporous materials.\cite{Farha_2012} The higher the surface area, the more molecules can be adsorbed for storage, separation or reaction purposes; it is therefore crucial to measure this surface area using experimental and computational methods. The most extensively used method to experimentally measure surface areas from adsorption isotherms is based on the Brunauer–Emmett–Teller (BET) theory.\cite{Detsi_2011} Most BET areas are calculated on \ce{N2} isotherm at its boiling temperature (\SI{77}{\kelvin}); although different probe adsorbates can be considered, they are not standard.\cite{Tian_2017} However, the definition of the surface area depends highly on the condition of measurement but also on the fitting methodology; a dozen isotherms were given to 61 labs for BET area calculation, and the statistical experiment yielded to a high level of disparities in the calculation.\cite{Osterrieth_2022} 
 
-Beyond the experimental techniques, some software programs like Zeo++ or PoreBlazer focus on computing pore size distributions, surface areas and void fractions using well-defined structure files.\cite{Zeo++,PoreBlazer} The definition of these values depend also on the probe size chosen to model a given adsorbate, the size of the framework atoms and the quality of the input structure. The computational values do not rely on adsorption models or on isotherm data as in the BET area, they are now relying on more comprehensive structural data. In this thesis, we will rely on these computational methods to define these geometrical descriptors of nanoporous materials.
+Beyond the experimental techniques, some software programs like Zeo++ or PoreBlazer focus on computing pore size distributions, surface areas and void fractions using well-defined structure files.\cite{Zeo++,PoreBlazer} The definition of these values depend also on the probe size chosen to model a given adsorbate, the size of the framework atoms and the quality of the input structure. The computational values do not rely on adsorption models or on isotherm data as in the BET area, they are now relying on more comprehensive structural data. As illustrated figure\ref{fgr:pores}, they however very much rely on a well-designed definition of the volume, the surface and the pore size we want to evaluate. Moreover, these values also highly depend on the radii of the framework atoms and the adsorbate we conside.\cite{Hung_2021}. In this thesis, we will rely on these computational methods to define these geometrical descriptors of nanoporous materials.
 
 \subsubsection{Classes of nanoporous materials}
 
-\todo{figure of zeolite/COF/MOF}
+\begin{figure}[ht]
+  \centering
+  \includegraphics[height=0.23\textwidth]{figures/1-screening/FER.jpg}
+  \includegraphics[height=0.23\textwidth]{figures/1-screening/COF-5.jpg}
+  \includegraphics[height=0.23\textwidth]{figures/1-screening/SBMOF-1.jpg}
+  \caption{Representation of a zeolite FER\cite{FER}, a COF\cite{Cote_2005} and a MOF\cite{KAXQIL}. Color code: brown for C, white for H, red for O, blue for Si, cyan for Ca, yellow for S and green for B.}
+\end{figure}
 
 %Material classification crystalline / amorphous
 Nanoporous materials can have different degrees of crystallinity from perfectly crystalline to completely amorphous. Most of the computational work is focused on crystalline structures, since the atoms are well-described within a periodic framework, which enables faster simulations. The presence of defects are also usually neglected, which could explain some discrepancies between simulations and experiments. And amorphous materials are described by thousands of atomic positions in order to grasp their intrinsic non-periodicity.\cite{Thyagarajan_2020} Activated carbons, a famous class of amorphous material, are extensively used in the industry for gas purification, but cannot be rationally studied to characterize their adsorption properties. One can distinguish roughly three main classes of crystalline nanoporous materials: the inorganic materials like zeolites (aluminosilicates or aluminophosphates), the organic materials like the porous polymer networks (PPNs) or the covalent organic frameworks (COFs) and the metal--organic frameworks (MOFs).
@@ -62,7 +72,7 @@ The fast development of this nanoporous materials genome motivated Boyd et al.\ 
 Yet, the sole increase in size of the databases is not enough. One needs to add diversity to have more general knowledge on the maximum performance and the explanatory features of such performance. Moreover, the diversity of structures ensure the quality of the predicted best materials for a given application. To qualitatively or quantitatively assess the diversity of a database, inventive methodologies have been developed. For instance, Martin, Smit and Haranczyk proposed a Voronoi hologram representation as a way of measuring similarities between structures to generate geometrically diverse subsets of a database.\cite{Martin_2011} Moosavi et al.\ made a comparative study of the diversity of three well-known databases CoRE MOF 2019,\cite{Chung_2019} BW-DB\cite{Boyd_2016} and ToBaCCo\cite{Gomez_Gualdron_2016, Colon_2017}  using geometrical and chemical descriptors to design a theoretical strategy for generating the most diverse set of materials.\cite{Moosavi_2020} Another approach consists in searching for similarities instead of differences in the materials by studying topological patterns in the data.\cite{Lee_2017} These investigations on the data structures give a solid ground to develop novel materials by objectively defining similarity, diversity and novelty. From the analysis gathered so far, one would need to radically change the approach by proposing materials with new chemistry, topology or mechanism (e.g.\ flexibility) in order to significantly improve the diversity of the current databases.
 
 
-\subsection{Screening methodologies}
+\subsection{Exploring the chemical and structural space}
 
 
 With the development of ever-increasing nanoporous material databases, computational chemists proposed more and more inventive methods to evaluate or screen thousands of structures. Other challenges arose, such as the design of more efficient methods than the brute force screening or the analysis of big data. Two research groups in Northwestern University led by R. Snurr and J. Hupp began to address those questions, they used a ``funnel-like'' approach to efficiently screen about 130,000 hypothetical MOF structures.\cite{Wilmer_2012} To do so, they performed a first screening involving fewer steps of simulation on the whole dataset, then they extracted a subset of top performing structures to perform a second round with more simulation steps. This procedure is repeated until a few materials are selected by a final round of simulations with reasonable accuracy. Similar ``funnel-like'' procedures have then been used in other field of applications as described in the Figure~\ref{fgr:screening}. This type of screening saves precious computation time by balancing the complexity of the calculation with the amount of data to be screened. The most demanding simulations or experiments are only applied to the few most promising structures. This method can rather efficiently identify top candidates, but it can't draw quantitative structure-property relationships (QSPR), beside facing scalability issues above a critical dataset size.
@@ -244,6 +254,8 @@ Seizing the opportunity of a formidable expansion of the nanoporous materials da
 The experimental work on Xe/Kr separation on SBMOF-1 revealed discrepancies between the selectivity values obtained experimentally and computationally.\cite{Banerjee_2016} {The assumption of rigid crystal structures in the molecular simulations could partially explain the difference observed.} Witman et al.\ proposed that the flexibility of the materials, that weren't considered in the screening of Simon et al., could explain the lower selectivity observed experimentally.\cite{Witman_2017} In this study, they screened the Henry regime separation of about 4,000 MOF structures of the CoRE MOF 2014 database\cite{Chung_2014}, and found that intrinsic flexibility, i.e.\ the thermal vibration of the material, can make the pore size derive from the ideal value for the separation and hence lower the selectivity. This study further confirms the importance of the pore size by highlighting the effect of its evolution over time.
 
 In 2019, Chung et al.\ screened the most extensive simulation-ready and experimentally synthesized MOF structures for Xe/Kr separation.\cite{Chung_2019} This study pointed out the potential of coordinated solvent molecules to fine-tune the selectivity for any separation application, since their presence can enhance selectivity in some cases. The results of their screening confirms the potential of structures such as SBMOF-1 found by Simon et al., but they also described a few structures with similar selectivity but with better xenon uptake. The authors emphasize the importance of considering other figures of merit such as the adsorption capacity. Other factors should be taken into account to find the best trade-off between all the relevant figures of merit; we could think of the kinetics of such a separation, the effect of flexibility on the performance, the stability of the materials (especially in radioactive environment), the financial aspects, and more.
+
+After this quick overview of the different screening studies in the field of xenon/krypton separation, we are now going to detail its industrial context, the foreseen top materials that could fulfill the industrial separation and what further studies are needed to better understand the process while discovering new materials.
 
 
 \section{Xenon/krypton separation}
