--- a/2-thermo.tex
+++ b/2-thermo.tex
@@ -9,9 +9,9 @@
 
 \section{Calculation of thermodynamic quantities}
 
-\subsection{Monte Carlo}
+\subsection{Statistical physics}
 
-
+From microcanonical to Gibbs ensemble
 
 \subsection{Grand canonical Monte Carlo}
 
