--- a/thesis.bib
+++ b/thesis.bib
@@ -2501,3 +2501,42 @@ for Global Competitiveness},
 	author = {Hyunsoo Park and Sauradeep Majumdar and Xiaoqi Zhang and Jihan Kim and Berend Smit},
 	title = {Inverse design of metal-organic frameworks for direct air capture of {CO}2 via deep reinforcement learning}
 }
+@article{FER,
+	doi = {10.1107/s0365110x66004298},
+	url = {https://doi.org/10.1107%2Fs0365110x66004298},
+	year = 1966,
+	month = {dec},
+	publisher = {International Union of Crystallography ({IUCr})},
+	volume = {21},
+	number = {6},
+	pages = {983--990},
+	author = {P. A. Vaughan},
+	title = {The crystal structure of the zeolite ferrierite},
+	journal = {Acta Crystallogr}
+}
+@article{vol_Ongari2017,
+	doi = {10.1021/acs.langmuir.7b01682},
+	url = {https://doi.org/10.1021/acs.langmuir.7b01682},
+	year = 2017,
+	month = {jul},
+	publisher = {American Chemical Society ({ACS})},
+	volume = {33},
+	number = {51},
+	pages = {14529--14538},
+	author = {Daniele Ongari and Peter G. Boyd and Senja Barthel and Matthew Witman and Maciej Haranczyk and Berend Smit},
+	title = {Accurate Characterization of the Pore Volume in Microporous Crystalline Materials},
+	journal = {Langmuir}
+}
+@article{Hung_2021,
+	doi = {10.1021/acs.jpcc.1c05959},
+	url = {https://doi.org/10.1021/acs.jpcc.1c05959},
+	year = 2021,
+	month = {sep},
+	publisher = {American Chemical Society ({ACS})},
+	volume = {125},
+	number = {37},
+	pages = {20416--20425},
+	author = {Ting-Hsiang Hung and Qiang Lyu and Li-Chiang Lin and Dun-Yen Kang},
+	title = {Transport-Relevant Pore Limiting Diameter for Molecular Separations in Metal{\textendash}Organic Framework Membranes},
+	journal = {J. Phys. Chem. C}
+}
