--- a/2-thermo.tex
+++ b/2-thermo.tex
@@ -12,9 +12,11 @@
 
 \subsection{Thermodynamics of adsorption separation}\label{section:exchange}
 
+\todo{selectivity, entropy enthalpy, Henry coefficients}
+
 From microcanonical to Gibbs ensemble
 
-selectivity, entropy enthalpy
+\todo{Exchange equilibrium}
 
 In order to analyze thoroughly the thermodynamics of competitive xenon and krypton adsorption using the results of both pure-component and multi-component GCMC simulations, we use in this work some thermodynamic properties (enthalpy and entropy in various conditions) associated with the following fictitious ``exchange equilibrium'':
 \begin{equation} \label{eqn:exchange}
@@ -48,6 +50,8 @@ As we have seen above in the existing literature, the computational screening of
 \todo{How SA VF and LCD are calculated}
 
 \todo{Put analyses of selectivity relationship with other descriptors: uptake, void fraction, surface area, etc.}
+
+\todo{Trade-offs etc. }
 
 \begin{figure}[ht]
   \centering
