--- a/2-thermo.tex
+++ b/2-thermo.tex
@@ -33,7 +33,11 @@ Furthermore, this ``exchange equilibrium'' can be generalized to the zero loadin
 
 \subsection{Grand canonical Monte Carlo}
 
-
+\begin{figure}[ht]
+  \centering
+  \includegraphics[width=0.48\textwidth]{figures/2-thermo/MC_moves.jpg}
+  \caption{MC moves for monoatomic atoms with multiple components}
+\end{figure}
 
 \subsection{Widom insertion}
 
