--- a/2-thermo.tex
+++ b/2-thermo.tex
@@ -39,6 +39,12 @@ Furthermore, this ``exchange equilibrium'' can be generalized to the zero loadin
   \caption{MC moves for monoatomic atoms with multiple components}
 \end{figure}
 
+\begin{figure}[ht]
+  \centering
+  \includegraphics[width=0.99\textwidth]{figures/2-thermo/MC_moves_2.jpg}
+  \caption{MC moves for monoatomic atoms with multiple components}
+\end{figure}
+
 \subsection{Widom insertion}
 
 
