--- a/2-thermo.tex
+++ b/2-thermo.tex
@@ -8,7 +8,7 @@
 \vspace*{-1\baselineskip}
 
 \section{Calculation of thermodynamic descriptors}
-
+dqsd
 
 \subsection{Thermodynamics of adsorption separation}\label{section:exchange}
 
@@ -35,13 +35,7 @@ Furthermore, this ``exchange equilibrium'' can be generalized to the zero loadin
 
 \begin{figure}[ht]
   \centering
-  \includegraphics[width=0.48\textwidth]{figures/2-thermo/MC_moves.jpg}
-  \caption{MC moves for monoatomic atoms with multiple components}
-\end{figure}
-
-\begin{figure}[ht]
-  \centering
-  \includegraphics[width=0.99\textwidth]{figures/2-thermo/MC_moves_2.jpg}
+  \includegraphics[width=0.99\textwidth]{figures/2-thermo/MC_moves.jpg}
   \caption{MC moves for monoatomic atoms with multiple components}
 \end{figure}
 
