--- a/thesis.bib
+++ b/thesis.bib
@@ -2540,3 +2540,61 @@ for Global Competitiveness},
 	title = {Transport-Relevant Pore Limiting Diameter for Molecular Separations in Metal{\textendash}Organic Framework Membranes},
 	journal = {J. Phys. Chem. C}
 }
+@incollection{Nicholson2000,
+  doi = {10.1016/s0927-5193(00)80011-x},
+  url = {https://doi.org/10.1016/s0927-5193(00)80011-x},
+  year = {2000},
+  publisher = {Elsevier},
+  pages = {231--256},
+  author = {David Nicholson and Thanos Stubos},
+  title = {Simulation of Adsorption in Micropores},
+  booktitle = {Membrane Science and Technology}
+}
+@article{Dunne_1996,
+	doi = {10.1021/la960495z},
+	url = {https://doi.org/10.1021%2Fla960495z},
+	year = 1996,
+	month = {jan},
+	publisher = {American Chemical Society ({ACS})},
+	volume = {12},
+	number = {24},
+	pages = {5888--5895},
+	author = {J. A. Dunne and R. Mariwala and M. Rao and S. Sircar and R. J. Gorte and A. L. Myers},
+	title = {Calorimetric Heats of Adsorption and Adsorption Isotherms. 1. O$_2$, N$_2$, Ar, {CO}$_2$, {CH}$_4$, C$_2$H$_6$, and {SF}$_6$ on Silicalite},
+	journal = {Langmuir}
+}
+@incollection{Finsy2007,
+  doi = {10.1016/s0167-2991(07)81098-6},
+  url = {https://doi.org/10.1016/s0167-2991(07)81098-6},
+  year = {2007},
+  publisher = {Elsevier},
+  pages = {2048--2053},
+  author = {Vincent Finsy and Selm De Bruyne and Luc Alaerts and Dirk De Vos and Pierre A. Jacobs and Gino V. Baron and Joeri F.M. Denayer},
+  title = {Shape selective adsorption of linear and branched alkanes in the Cu3({BTC})2 metal-organic framework},
+  booktitle = {From Zeolites to Porous {MOF} Materials - The 40th Anniversary of International Zeolite Conference,  Proceedings of the 15th International Zeolite Conference}
+}
+@article{Wang_2020,
+	doi = {10.1016/j.chemosphere.2020.127279},
+	url = {https://doi.org/10.1016%2Fj.chemosphere.2020.127279},
+	year = 2020,
+	month = {nov},
+	publisher = {Elsevier {BV}},
+	volume = {258},
+	pages = {127279},
+	author = {Jianlong Wang and Xuan Guo},
+	title = {Adsorption isotherm models: Classification, physical meaning, application and solving method},
+	journal = {Chemosphere}
+}
+@article{Metropolis1949,
+  doi = {10.1080/01621459.1949.10483310},
+  url = {https://doi.org/10.1080/01621459.1949.10483310},
+  year = {1949},
+  month = sep,
+  publisher = {Informa {UK} Limited},
+  volume = {44},
+  number = {247},
+  pages = {335--341},
+  author = {Nicholas Metropolis and S. Ulam},
+  title = {The Monte Carlo Method},
+  journal = {Journal of the American Statistical Association}
+}
