auto build subfile

--- a/2-thermo.tex
+++ b/2-thermo.tex
@@ -1,6 +1,5 @@
-% Emmanuel Ren PhD thesis -- (C) 2023
-%!TeX root = 2-thermo
-\documentclass[main]{subfiles}
+%!TeX root = 2-thermo.tex
+\documentclass[main.tex]{subfiles}
 
 \begin{document}
 
