--- a/3-fastsim.tex
+++ b/3-fastsim.tex
@@ -1,5 +1,4 @@
-% Emmanuel Ren PhD thesis -- (C) 2023
-%!TeX root = 3-fastsim
+%!TeX root = 3-fastsim.tex
 \documentclass[main]{subfiles}
 
 \begin{document}
