--- a/5-diffusion.tex
+++ b/5-diffusion.tex
@@ -1,5 +1,4 @@
-% Emmanuel Ren PhD thesis -- (C) 2023
-%!TeX root = 5-diffusion
+%!TeX root = 5-diffusion.tex
 \documentclass[main]{subfiles}
 
 \begin{document}
