--- a/6-perspectives.tex
+++ b/6-perspectives.tex
@@ -1,5 +1,4 @@
-% Emmanuel Ren PhD thesis -- (C) 2023
-%!TeX root = 6-perspectives
+%!TeX root = 6-perspectives.tex
 \documentclass[main]{subfiles}
 
 \begin{document}
